--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
       "always-multiline"
     ],
     "arrow-spacing": "error",
+    "arrow-parens": "error",
     "keyword-spacing": "error",
     "space-infix-ops": "error",
     "semi": [
