--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Yahoo TV m3u8 downloader",
   "description": "Yahoo TV m3u8 下載",
-  "version": "0.1",
+  "version": "0.2",
   "applications": {
     "gecko": {
       "id": "yahoo-tv-m3u8-downloader@flandre.tw",
@@ -24,17 +24,16 @@
         "https://tw.tv.yahoo.com/*"
       ],
       "js": [
-        "content_scripts/FileSaver.min.js",
         "content_scripts/index.js"
       ]
     }
   ],
   "page_action": {
-    "browser_style": true,
     "default_icon": {
       "16": "icons/Y16.png",
       "32": "icons/Y32.png"
-    }
+    },
+    "default_popup": "page_action/index.html"
   },
   "permissions": [
     "https://tw.tv.yahoo.com/*",
