--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     "webextensions": true
   },
   "globals": {
-    "saveAs": true
+    "saveAs": true,
+    "TSDemuxer": true
   },
   "parserOptions": {
     "sourceType": "module",
