--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Yahoo TV m3u8 downloader",
   "description": "Yahoo TV m3u8 下載",
-  "version": "0.3",
+  "version": "0.4",
   "applications": {
     "gecko": {
       "id": "yahoo-tv-m3u8-downloader@flandre.tw",
@@ -15,7 +15,8 @@
   },
   "background": {
     "scripts": [
-      "background.js"
+      "background/TSDemuxer.js",
+      "background/index.js"
     ]
   },
   "content_scripts": [
